--- a/src/Components/Preview.module.css
+++ b/src/Components/Preview.module.css
@@ -1,10 +1,9 @@
 .previewContainer{
-    /* border: 2px solid black; */
     width: 48rem;
     height: 69rem;
     box-shadow: 0 0 8px;
 
-    /* line-height: 15px; */
+  
 
 }
 .heading{
@@ -83,5 +82,14 @@ margin-bottom: 0;
     align-items: center;
     margin: 15px auto;
     
+
+}
+@media screen and (max-width :600px){
+    /* .contact{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+       align-items: center;
+        padding-left: 50px;
+    } */
 
 }
